onboard/scripts/privledged-pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: blue
  name: privileged-pod
spec:
  containers:
    - name:  pause
      image: k8s.gcr.io/pause
      securityContext:
        privileged: true
