onboard/scripts/base-network-policy.yml
# Deny All Network Policy for the Blue Namespace
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: blue
spec:
  podSelector:
    matchLabels: {}
---
# Deny All Network Policy for the Red Namespace
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: red
spec:
  podSelector:
    matchLabels: {}
---
# Only accept traffic from all local pods in the Blue namespace
kind: NetworkPolicy 
apiVersion: networking.k8s.io/v1
metadata:
  namespace: blue
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
---
# Only accept traffic from all local pods in the Red namespace
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: red
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
